--- a/templates/base.jade
+++ b/templates/base.jade
@@ -28,6 +28,8 @@ html(ng-app="abelujo")
 
     script(defer, src="https://cdn.jsdelivr.net/npm/notiflix@2.7.0/dist/notiflix-aio-2.7.0.min.js")
     script(src="https://cdn.jsdelivr.net/npm/luxon@1.25.0/build/global/luxon.min.js")
+    script(src="https://unpkg.com/htmx.org@1.4.0")
+
     //- script(ng-src="{% static 'app.js' %}")
     script(type='text/javascript', src="{% static 'search/js/abelujo-js.js' %}")
     script(type='text/javascript', src="{% static 'prelude-browser-min.js' %}")
@@ -73,6 +75,9 @@ html(ng-app="abelujo")
                 li.divider(role="separator")
                 li(href="#")
                     a(href='/{{ LANGUAGE_CODE }}/databasesearch/client') {% trans "Clients" %}
+                li(href="#")
+                    a(href='/{{ LANGUAGE_CODE }}/reservations') {% trans "Reservations" %}
+
                 li.divider(role="separator")
                 li(href="#")
                     a(href='/{{ LANGUAGE_CODE }}/database') {% trans "All" %}
