(minor) hide reservations link in dropdown menu for now
for #223

--- a/templates/base.jade
+++ b/templates/base.jade
@@ -75,7 +75,7 @@ html(ng-app="abelujo")
                 li.divider(role="separator")
                 li(href="#")
                     a(href='/{{ LANGUAGE_CODE }}/databasesearch/client') {% trans "Clients" %}
-                li(href="#")
+                // li(href="#")
                     a(href='/{{ LANGUAGE_CODE }}/reservations') {% trans "Reservations" %}
 
                 li.divider(role="separator")
