--- a/templates/search/collection.jade
+++ b/templates/search/collection.jade
@@ -241,7 +241,7 @@ div(ng-cloak, ng-controller="collectionController")
         td
           div(ng-show="card.places") {{ 'card.places' | ng }}
         td
-          a.btn.btn-default(href="#", title='{% trans "Remember to command this card. Add it to the list for later." %}', ng-click="do_card_command(card.id)")
+          a.btn.btn-default(title='{% trans "Remember to command this card. Add it to the list for later." %}', ng-click="do_card_command(card.id)")
             i.glyphicon.glyphicon-shopping-cart
             span &nbsp; x
               span(id="command{{ 'card.id' | ng }}") {{ 'card.quantity_in_command' | ng }}
