--- a/templates/search/history_sells_day.html
+++ b/templates/search/history_sells_day.html
@@ -195,7 +195,7 @@
 
     <td>
       <div class="btn-group", style="margin-left: 1em" data-comment="copied from card_show">
-        <a class="btn btn-warning", href="#" title='{% trans "Remember to command this card. Add it to the list for later." %}' onclick="card_command({{ it.card.pk }})">
+        <a class="btn btn-warning" title='{% trans "Remember to command this card. Add it to the list for later." %}' onclick="card_command({{ it.card.pk }})">
           <i class="glyphicon glyphicon-shopping-cart"> </i>
           <span> x
             <span id="nb_to_command_{{ it.card.pk }}"> {{ it.card.quantity_to_command }}
