menu: show Client Reservation menu if FEATURE enabled

--- a/templates/base.jade
+++ b/templates/base.jade
@@ -154,6 +154,10 @@ html(ng-app="abelujo")
               span.badge.ng-cloak(title='{% trans "Number of cards needing a command." %}') {{ "auto_command_total" | ng }}
               span.badge.ng-cloak(title='{% trans "Number of ongoing commands." %}') {{ "ongoing_commands_nb" | ng }}
 
+          li(ng-show="FEATURE_SHOW_RESERVATION_BUTTON", ng-class="{active: url == 'commands' }")
+            a(href='{% url "reservations" %}') {% trans "Client Commands" %}
+              span.badge.ng-cloak(title='{% trans "Number of ongoing client commands." %}') {{ "client_commands_nb" | ng }}
+
           li(ng-class="{active: url == 'history' }")
             a(href='{% url "history_sells" %}') {% trans "History" %}
 
