(minor) rm hardcoded "librairie" in bill PDF template
[ci skip]

--- a/templates/pdftemplates/pdf-bill-main.html
+++ b/templates/pdftemplates/pdf-bill-main.html
@@ -109,7 +109,7 @@
                     <table>
                         <tr>
                             <td class="title">
-                              Librairie<br> {{ bookshop.name }}
+                                {{ bookshop.name }}
                                 <img style="width:100%; max-width:300px;">
                             </td>
 
