--- a/templates/search/reservations.html
+++ b/templates/search/reservations.html
@@ -68,9 +68,15 @@
       <div id="resa-{{ resa.pk }}" class="row">
         <div class="col-md-8">
 
-          <a href="{{ resa.card.get_absolute_url }}">
-            <h4> {{ resa.card.title }} </h4>
-          </a>
+          <h4>
+            <a href="{{ resa.get_absolute_url }}">
+              #{{ resa.pk }} 
+            </a>
+            <a href="{{ resa.card.get_absolute_url }}">
+
+              {{ resa.card.title }}
+            </a>
+          </h4>
 
           <div style="clear: both">
             <div style="float: left"> {{ resa.card.pubs_repr }} </div>
