(minor) selection: max cover width
[ci skip]

--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -95,7 +95,7 @@
     .col-lg-4
 
       .row(style="margin-left: 1px;")
-        img.img-responsive(ng-src="{{ object.cover }}")
+        img.img-responsive(ng-src="{{ object.cover }}", style="max-width: 200px")
 
       .row(style="margin-left: 1px;")
 
