--- a/templates/search/catalogue_selection.html
+++ b/templates/search/catalogue_selection.html
@@ -31,7 +31,8 @@
 <div class="row">
 
   <div class="col-md-2">
-    <img class="media-object" src="{{ card.cover }}" alt="cover">
+    <img class="media-object" src="{{ card.cover }}" alt="cover"
+         style="max-width: 200px">
   </div>
 
   <div class="col-md-4">
