Inventory diff: hide bad numbers (because of pagination)
[ci skip]

--- a/templates/search/inventory_terminate.jade
+++ b/templates/search/inventory_terminate.jade
@@ -35,7 +35,8 @@ div(ng-controller="inventoryTerminateController")
 
 
   h3 {% trans "Terminate the inventory of" %} {{ 'name' | ng}}
-  .col-md-12
+  // The following numbers are not appropriate with pagination anymore (2021-09).
+  //.col-md-12
    .col-md-3(ng-if="is_no_origin").panel.panel-warning
     div.panel-heading
     div.panel-body {% trans "Warning: we inventoried some cards that were not here originally." %} (x {{'obj_length(no_origin)'|ng}})
