(minor) Card show: add padding to summary
[ci skip]

--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -263,7 +263,7 @@
           if object.summary
             hr
             h4
-              span.glyphicon.glyphicon-align-left(style="padding-right: 1em;")
+              span.glyphicon.glyphicon-align-left(style="padding-right: 1em; margin-left: 1em;")
               span {% trans "Summary" %}
             div(style="padding-left: 1em") {{ object.summary }}
           else
